refactor(conversation-app-service): rename dto and reduce warning code